--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -124,7 +124,7 @@
     "LBL_SHOP_YETIFORCEAUTOASSIGNMENT_DESC": "YetiForce Auto Assignment significantly improves the efficiency of your team's work. The mechanism will automatically assign tasks to a user or a group of users,eg. inquiries sent via a contact form or tickets, on the basis of strictly defined conditions.\nThe mechanism can estimate the workload of employees in real time and assign new tasks to these employees who are able to take care of them at the moment. All the conditions can be customized using an intuitive panel in the system settings to match the profile of your company.",
     "LBL_ACTIVATE_DEACTIVATE_SERVICE": "Activate/Deactivate service",
     "LBL_ACTIVATE_DEACTIVATE_SERVICE_CONFIRM_DESC": "Are you sure you want to activate/deactivate service?",
-    "LBL_SHOP_YETIFORCEPDFPREMIUM_INTRO": "..",
+    "LBL_SHOP_YETIFORCEPDFPREMIUM_INTRO": "Additional Chromium/Chrome engine to generate PDF files",
     "LBL_SHOP_YETIFORCEPDFPREMIUM_DESC": ".."
   }
 }
