--- a/languages/en-US/FInvoice.json
+++ b/languages/en-US/FInvoice.json
@@ -6,6 +6,7 @@
     "LBL_INVOICE_ADDRESS": "Invoice address",
     "LBL_ADDRESS_DELIVERY_INFORMATION": "Delivery address",
     "LBL_DESCRIPTION_BLOCK": "Description",
+    "LBL_CHECK_QUANTITY_AVAILABLE": "The selected quantity of the product is greater than the available quantity.",
     "LBL_ATTENTION_BLOCK": "Comments",
     "FL_SUBJECT": "Subject",
     "FL_PAYMENT_DATE": "Due date",
