--- a/languages/en-US/Settings/Profiles.json
+++ b/languages/en-US/Settings/Profiles.json
@@ -96,7 +96,8 @@
     "MeetingUrl": "Meeting URL",
     "InterestsConflictUsers": "Conflict of interests",
     "CustomViewAdvCond": "Advanced custom view conditions",
-    "RecordActivityNotifier": "Record activity notifier"
+    "RecordActivityNotifier": "Record activity notifier",
+    "WorkflowTriggerWhenRecordIsBlocked": "Workflow trigger when record is blocked"
   },
   "js": {
     "JS_RECORD_DELETED_SUCCESSFULLY": "Profile deleted successfully"
