Improved event handlers panel

--- a/languages/en-US/Settings/EventHandler.json
+++ b/languages/en-US/Settings/EventHandler.json
@@ -11,6 +11,7 @@
     "LBL_EDIT_VIEW_PRESAVE": "Validation before saving the record",
     "LBL_ENTITY_CHANGE_STATE": "Change state",
     "LBL_ENTITY_BEFORE_SAVE": "Before save",
-    "LBL_ENTITY_AFTER_SAVE": "After save"
+    "LBL_ENTITY_AFTER_SAVE": "After save",
+    "LBL_DETAIL_VIEW_BEFORE": "Detail View"
   }
 }
