--- a/languages/en-US/Settings/EventHandler.json
+++ b/languages/en-US/Settings/EventHandler.json
@@ -14,7 +14,7 @@
     "LBL_ENTITY_AFTER_SAVE": "After save",
     "LBL_DETAIL_VIEW_BEFORE": "Detail View",
     "LBL_EDIT_VIEW_BEFORE": "Edit View",
-    "LBL_EDIT_VIEW_DUPLICATE": "Edit View Duplicate",
+    "LBL_EDIT_VIEW_DUPLICATE": "Edit View (Duplicate)",
     "LBL_INVENTORY_RECORD_DETAILS": "Loading data for inventory"
   }
 }
