--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1516,7 +1516,8 @@
     "LBL_LESS_THAN_FIELD": "less than field (<)",
     "LBL_GREATER_THAN_FIELD": "greater than field (>)",
     "LBL_LESS_THAN_OR_EQUAL_FIELD": "less than or equal to field (<=)",
-    "LBL_GREATER_OR_EQUAL_FIELD": "greater than or equal to field (>=)"
+    "LBL_GREATER_OR_EQUAL_FIELD": "greater than or equal to field (>=)",
+    "LBL_DRAG_AND_DROP_FILES": "Drag & Drop your files or Browse"
   },
   "js": {
     "JS_APPROVE": "Approve",
