--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1480,7 +1480,13 @@
     "LBL_LESS_THAN_OR_EQUAL_FIELD": "less than or equal to field (<=)",
     "LBL_GREATER_OR_EQUAL_FIELD": "greater than or equal to field (>=)",
     "LBL_DRAG_AND_DROP_FILES": "Drag & Drop your files or Browse",
-    "LBL_SELECT_CALENDAR": "Select calendar"
+    "LBL_SELECT_CALENDAR": "Select calendar",
+    "LBL_RECORDS_TILES": "Tiles view",
+    "LBL_CHOOSE_TILE_SIZE": "Tile size",
+    "LBL_VERY_SMALL_TILE": "Very small",
+    "LBL_SMALL_TILE": "Small",
+    "LBL_MEDIUM_TILE": "Medium",
+    "LBL_BIG_TILE": "Big"
   },
   "js": {
     "JS_APPROVE": "Approve",
