Update install translations

--- a/install/languages/it-IT/ConfReport.json
+++ b/install/languages/it-IT/ConfReport.json
@@ -93,7 +93,7 @@
     "LBL_PER_SECOND": "/s",
     "LBL_LABEL_CRM_VERSION": "Versione CRM",
     "LBL_LABEL_CRM_DATE": "Data di rilascio versione",
-    "LBL_LABEL_COMPANY_SIZE": "Company size",
+    "LBL_LABEL_COMPANY_SIZE": "Dimensione società",
     "LBL_LABEL_LOCALE": "Locale",
     "LBL_LABEL_ZEND_VERSION": "Versione Zend",
     "LBL_LABEL_CACERTBUNDLE_PATH": "Percorso certificato CA",
@@ -257,9 +257,9 @@
     "LBL_FORMAT": "Formato riga",
     "LBL_ENGINE": "Motore",
     "LBL_COLLATION": "Collazione",
-    "LBL_LABEL_WATCHDOG": "Watchdog",
-    "LBL_LABEL_REGISTER": "Register",
-    "LBL_LABEL_SHOP_CACHE": "Shop cache",
+    "LBL_LABEL_WATCHDOG": "Vigilanza",
+    "LBL_LABEL_REGISTER": "Cancelleria",
+    "LBL_LABEL_SHOP_CACHE": "Cache del negozio",
     "LBL_LAMP_CONFIG_FILES": "File di configurazione LAMP",
     "LBL_PATH_VERIFICATION_TITLE": "Verifica percorso"
   },
