--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1481,12 +1481,11 @@
     "LBL_GREATER_OR_EQUAL_FIELD": "greater than or equal to field (>=)",
     "LBL_DRAG_AND_DROP_FILES": "Drag & Drop your files or Browse",
     "LBL_SELECT_CALENDAR": "Select calendar",
-    "LBL_VIEW_TILES": "Tiles view",
-    "LBL_CHOOSE_TILE_SIZE": "Tile size",
-    "LBL_VERY_SMALL_TILE": "Very small",
-    "LBL_SMALL_TILE": "Small",
-    "LBL_MEDIUM_TILE": "Medium",
-    "LBL_BIG_TILE": "Big"
+    "LBL_TILES_VIEW": "Tiles view",
+    "LBL_TILE_VERY_SMALL": "Very small",
+    "LBL_TILE_SMALL": "Small",
+    "LBL_TILE_MEDIUM": "Medium",
+    "LBL_TILE_BIG": "Big"
   },
   "js": {
     "JS_APPROVE": "Approve",
