--- a/languages/en-US/SMSNotifier.json
+++ b/languages/en-US/SMSNotifier.json
@@ -6,11 +6,14 @@
     "BL_SMS_CONTENT": "SMS content",
     "FL_RELATED_TO": "Related to",
     "FL_STATUS": "Status",
+    "FL_PARENT": "Parent SMS",
+    "FL_MESSAGE_ID": "Message ID",
     "PLL_UNDEFINED": "Undefined",
     "PLL_DELIVERED": "Delivered",
     "PLL_FAILED": "Failed",
     "PLL_SENT": "Sent",
     "PLL_QUEUE": "In queue",
+    "PLL_REPLY": "Reply",
     "LBL_MASS_SEND_SMS_INFO": "All text messages are sent in cron",
     "LBL_CHECK_STATUS": "Check status",
     "FL_MESSAGE": "Message",
