--- a/languages/en-US/Settings/SMSNotifier.json
+++ b/languages/en-US/Settings/SMSNotifier.json
@@ -15,8 +15,11 @@
     "LBL_SMSPROVIDER_CREATE": "Add provider",
     "LBL_SMSPROVIDER_EDIT": "Edit provider",
     "LBL_CALLBACK_ADDRESSES": "Callback addresses",
-    "FL_CALLBACK_URL_FOR_REPORT": "SMS Reports",
-    "FL_CALLBACK_URL_FOR_REPLY": "SMS Reception"
+    "LBL_CALLBACK_ADDRESSES_DESC": "In order to generate callback addresses for SMS communication, it is necessary to first create a webservice connection for SMS.\nThe following URLs must be entered in the callback section directly at the provider.",
+    "FL_CALLBACK_URL_FOR_REPORT": "Reports (SMS,MMS)",
+    "FL_CALLBACK_URL_FOR_REPLY": "Reception (SMS)",
+    "FL_CALLBACK_URL_FOR_REPORT_DESC": "URL for delivery reports. To be entered directly at the provider.",
+    "FL_CALLBACK_URL_FOR_REPLY_DESC": "URL for receptions. To be entered directly at the provider."
   },
   "js": {
     "LBL_DELETE_CONFIRMATION": "Are you sure you want to delete this configuration?",
