integration with OVH.

--- a/languages/en-US/Settings/SMSNotifier.json
+++ b/languages/en-US/Settings/SMSNotifier.json
@@ -4,7 +4,9 @@
     "FL_PROVIDER": "Provider",
     "FL_STATUS": "Status",
     "FL_SMSAPI_FROM": "Sender name",
-    "FL_API_KEY": "Api key",
+    "FL_APP_KEY": "App key",
+    "FL_SECRET_KEY": "Secret Key",
+    "FL_CONSUMER_KEY": "Consumer Key",
     "LBL_ADD_RECORD": "New configuration",
     "LBL_SMSNOTIFIER": "SMS provider configuration",
     "LBL_SMSNOTIFIER_DESCRIPTION": " ",
