--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1488,7 +1488,8 @@
     "LBL_TILE_VERY_SMALL": "Very small",
     "LBL_TILE_SMALL": "Small",
     "LBL_TILE_MEDIUM": "Medium",
-    "LBL_TILE_BIG": "Big"
+    "LBL_TILE_BIG": "Big",
+    "LBL_SET_CUSTOM_COLUMNS_LABEL": "Set custom label"
   },
   "js": {
     "JS_APPROVE": "Approve",
