--- a/languages/en-US/Settings/Companies.json
+++ b/languages/en-US/Settings/Companies.json
@@ -51,7 +51,8 @@
     "LBL_BRAND_DATA_INFO": "Block used when YetiForce Branding is purchased allows you to enter custom data visible in the footer.",
     "LBL_BILLING_DATA": "Billing data",
     "LBL_SYSTEM_NOT_REGISTERED": "The YetiForce system has not been properly registered or the provided data is incorrect.",
-    "LBL_PAID_FN_NO_SUBSCRIPTION": "Paid functionalities have been enabled in the system %s, please purchase a subscription."
+    "LBL_PAID_FN_NO_SUBSCRIPTION": "Paid functionalities have been enabled in the system %s, please purchase a subscription.",
+    "LBL_WRONG_URL": "Url address is wrong."
   },
   "js": {
     "JS_ENTER_REGISTRATION_KEY": "Enter registration key",
