--- a/languages/en-US/Settings/Picklist.json
+++ b/languages/en-US/Settings/Picklist.json
@@ -11,30 +11,20 @@
     "LBL_ASSIGN_VALUE": "Assign Roles",
     "LBL_ASSIGN_VALUES_TO_ROLES": "Assign values to Roles",
     "LBL_CHOOSE_ROLES": "Choose Roles",
-    "LBL_DELETE_PICKLIST_ITEMS": "Delete pickList items",
-    "LBL_DELETE_VALUE": "Delete value",
     "LBL_DRAG_ITEMS_TO_RESPOSITION": "Drag items to reposition them",
     "LBL_ENABLE/DISABLE_MESSGAE": "Click on value to enable/disable it. Then click save",
-    "LBL_ENTER_NEW_NAME": "Enter new name",
     "LBL_CURRENT_VALUE": "Current value",
-    "LBL_ITEMS_TO_DELETE": "Items to delete",
     "LBL_ITEMS": "Values",
-    "LBL_ITEM_TO_RENAME": "Item to rename",
     "LBL_ITEM_VALUE": "Item value",
     "LBL_NON_EDITABLE_PICKLIST_VALUES": "Non-editable values",
     "LBL_NON_EDITABLE_PICKLIST_VALUE": "Value is non-editable",
-    "LBL_RENAME_VALUE": "Rename value",
     "LBL_REPLACE_IT_WITH": "Replace it with",
     "LBL_ROLE_NAME": "Role name",
     "LBL_SAVE_ORDER": "Save order",
-    "LBL_SELECT_AN_ITEM_TO_RENAME_OR_DELETE": "Select an item to rename or delete",
     "LBL_SELECTED_VALUES_MESSGAE": "will appear for the user with this Role",
     "LBL_SELECTED_VALUES": "Selected values",
     "LBL_SELECT_PICKLIST_IN": "Select picklist in",
-    "LBL_TO_DELETE_MULTIPLE_HOLD_CONTROL_KEY": "To delete multiple items hold ctrl key down while selecting items",
     "LBL_VALUES_ASSIGNED_TO_A_ROLE": "Values assigned to a Role",
-    "NO_PICKLIST_FIELDS": "do not have any picklist fields",
-    "LBL_NEW_VALUE": "New value",
     "LBL_CLOSES_RECORD": "Is the record supposed to be blocked?",
     "LBL_PREFIX": "Prefix",
     "LBL_BLOCKED_RECORD_INFO": "Selecting this option will prevent the record from being edited. If you want to unblock the record you have to accept the assigned permissions in the profile",
@@ -43,7 +33,6 @@
     "LBL_RECORD_STATE_OPEN": "Open",
     "LBL_RECORD_STATE_CLOSED": "Closed",
     "LBL_RECORD_STATE_INFO": "This value might be taken into account in some record state mechanisms",
-    "LBL_EDIT_PROCESS_LOCK_STATUS": "Edit lock and process status",
     "LBL_TIME_COUNTING": "Time counting",
     "LBL_TIME_COUNTING_INFO": "You can group several statuses into categories in which the system summarizes the times of these statuses. The system can then perform some action when the time is exceeded.",
     "LBL_TIME_COUNTING_REACTION": "Reaction time",
@@ -51,22 +40,16 @@
     "LBL_TIME_COUNTING_IDLE": "Idle time",
     "LBL_IS_NOT_A_PROCESS_STATUS_FIELD": "Field is not a process status field.",
     "LBL_IMPORT_VALUE": "Import values",
-    "LBL_CONFIRM_BEFORE_MODIFY": "Are you sure you want to modify/delete it? The selected field is interdependent with other modules: %s"
+    "LBL_CONFIRM_BEFORE_MODIFY": "Are you sure you want to modify/delete it? The selected field is interdependent with other modules: %s",
+    "LBL_DUPLICATE_VALUE": "Value already exists",
+    "LBL_CSV_DESC": "Import csv file with each value per line"
   },
   "js": {
-    "JS_ALL_ROLES_SELECTED": "All Roles selected",
-    "JS_ITEM_ADDED_SUCCESSFULLY": "Item added successfully",
-    "JS_ITEM_RENAMED_SUCCESSFULLY": "Item renamed successfully",
-    "JS_ITEM_SAVED_SUCCESSFULLY": "Item saved successfully",
     "JS_ITEMS_DELETED_SUCCESSFULLY": "Items deleted successfully",
     "JS_LIST_UPDATED_SUCCESSFULLY": "List updated successfully",
-    "JS_MORE_THAN_ONE_ITEM_SELECTED": "More than one item selected",
-    "JS_NO_ITEM_SELECTED": "No item selected",
     "JS_NOT_ALLOWED": "are not allowed",
     "JS_PLEASE_SELECT_MODULE": "Please select module",
-    "JS_SEQUENCE_UPDATED_SUCCESSFULLY": "Sequence updated successfully",
     "JS_SPECIAL_CHARACTERS": "Special characters like",
-    "JS_VALUE_ASSIGNED_SUCCESSFULLY": "Value assigned successfully",
     "JS_YOU_CANNOT_DELETE_ALL_THE_VALUES": "You cannot delete all values"
   }
 }
