--- a/languages/en-US/Settings/Picklist.json
+++ b/languages/en-US/Settings/Picklist.json
@@ -40,7 +40,7 @@
     "LBL_TIME_COUNTING_IDLE": "Idle time",
     "LBL_IS_NOT_A_PROCESS_STATUS_FIELD": "Field is not a process status field.",
     "LBL_IMPORT_VALUE": "Import values",
-    "LBL_CONFIRM_BEFORE_MODIFY": "Are you sure you want to modify/delete it? The selected field is interdependent with other modules: %s",
+    "LBL_CONFIRM_BEFORE_MODIFY": "The selected field is interdependent with other modules: %s. Are you sure you want to proceed?",
     "LBL_DUPLICATE_VALUE": "Value already exists",
     "LBL_CSV_DESC": "Import csv file with each value per line"
   },
