Web Content Accessibility Guidelines improvments

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -183,6 +183,7 @@
     "LBL_CURRENT_FY": "Current FY",
     "LBL_CURRENT_MONTH": "Current month",
     "LBL_CURRENT_WEEK": "Current week",
+    "LBL_CURRENT_PAGE": "Current page number",
     "LBL_CUSTOM": "Custom",
     "LBL_CUSTOMIZE_MAIN_MENU": "Customize main menu",
     "LBL_CUSTOM_FIELD_MAPPING": "Custom field mapping",
@@ -728,6 +729,7 @@
     "LBL_SORT_DESCENDING": "Sort descending",
     "LBL_SORT_ASCENDING": "Sort ascending",
     "LBL_GO_TO_RECORDS_LIST": "Go to records list",
+    "LBL_GO_TO_FIRST_PAGE": "Go to first page",
     "LBL_SELECT_FILE": "Select file to upload",
     "LBL_ENABLE_CURRENCY": "Currency enable",
     "LBL_DISABLE_CURRENCY": "Currency disable",
