WCAG 2.1 for ListViewContents.tpl

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -19,6 +19,7 @@
     "Assets": "Assets",
     "OSSTimeControl": "Time Control",
     "Assigned To": "Assigned To",
+    "Empty Record": "Empty Record",
     "Was read": "Updated",
     "BlueDart": "BlueDart",
     "Calendar": "Calendar",
