--- a/languages/en-US/Settings/PickListDependency.json
+++ b/languages/en-US/Settings/PickListDependency.json
@@ -4,7 +4,7 @@
     "LBL_ADD_RECORD": "Add record",
     "PickListDependency": "PickList Dependency",
     "LBL_CONFIGURE_DEPENDENCY_HELP_1": "Only mapped picklist values of the source field will be shown below (except for first time)",
-    "LBL_CONFIGURE_DEPENDENCY_HELP_2": "If you want to see or change the mapping for the other picklist values of source field, \r\nthen you can select the values by clicking on <b>'Select Source values'<\/b> button on the right side",
+    "LBL_CONFIGURE_DEPENDENCY_HELP_2": "If you want to see or change the mapping for the other picklist values of source field, \r\nthen you can select the values by clicking on <b>'Select Source values'</b> button on the right side",
     "LBL_CONFIGURE_DEPENDENCY_HELP_3": "Selected values of the target field values, are highlighted as",
     "LBL_CONFIGURE_DEPENDENCY_INFO": "Click on the respective cell to change the mapping for picklist values of target field",
     "LBL_ERR_CYCLIC_DEPENDENCY": "This dependency setup is not allowed as it ends up in some cyclic dependency",
@@ -14,11 +14,12 @@
     "LBL_SELECT_SOURCE_PICKLIST_VALUES": "Select source picklist values",
     "LBL_SELECT_SOURCE_VALUES": "Select source values",
     "LBL_SOURCE_FIELD": "Source field",
-    "LBL_TARGET_FIELD": "Target field",
+    "LBL_SECOND_FIELD": "Second field",
+    "LBL_THIRD_FIELD": "Third field",
+    "LBL_ADD_THIRD_FIELD": "Add third field",
     "LBL_UNMARK_ALL": "Unmark all",
-    "Module": "Module",
-    "Source Field": "Source field",
-    "Target Field": "Target field"
+    "LBL_MODULE": "Module",
+    "Source Field": "Source field"
   },
   "js": {
     "JS_DEPENDENCY_ATLEAST_ONE_VALUE": "You need to select at least one value for",
