WCAG Base view.

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1497,7 +1497,10 @@
     "LBL_TILE_BIG": "Big",
     "LBL_SET_CUSTOM_COLUMNS_LABEL": "Set custom label",
     "LBL_ICONS": "Icons",
-    "LBL_BROWSE_ASSETS": "Browse Assets"
+    "LBL_BROWSE_ASSETS": "Browse Assets",
+    "FL_CHECKBOX": "Checkbox",
+    "LBL_RECORD_COLLECTOR": "Record Collector",
+    "LBL_VIES": "VIES"
   },
   "js": {
     "JS_APPROVE": "Approve",
