--- a/languages/en-US/Notification.json
+++ b/languages/en-US/Notification.json
@@ -41,7 +41,8 @@
     "LBL_NO_UNREAD_NOTIFICATIONS": "No unread notifications",
     "FL_SUBPROCESS_SECOND_LEVEL": "Second level subprocess",
     "LBL_NOTIFICATION_BY_SENDER": "Number of notifications by sender",
-    "LBL_NOTIFICATION_BY_RECIPIENT": "Number of notifications by recipient"
+    "LBL_NOTIFICATION_BY_RECIPIENT": "Number of notifications by recipient",
+    "Notifications": "Notifications"
   },
   "js": {
     "JS_MARKED_AS_READ": "Marked as read"
