--- a/languages/en-US/Home.json
+++ b/languages/en-US/Home.json
@@ -20,8 +20,6 @@
     "LBL_NOTIFICATION_SETTINGS": "Notification settings",
     "LBL_TYPE_NOTIFICATIONS": "Notification types",
     "LBL_TIME": "Time",
-    "LBL_NOTIFICATION_BY_SENDER": "Number of notifications by sender",
-    "LBL_NOTIFICATION_BY_RECIPIENT": "Number of notifications by recipient",
     "LBL_MINI_LIST": "Mini list",
     "LBL_ADDITIONAL_FILTERS": "Additional filters",
     "LBL_WIDGET_NAME": "Widget name",
@@ -42,6 +40,24 @@
     "LBL_CHART_COLORS_FROM_FILTER": "Colors from filter",
     "LBL_WIDGET_DOWNLOAD": "Download graph",
     "LBL_WIDGET_PRINT": "Print graph",
-    "LBL_WIDGET_SHOW_SUMMARY": "Show summary"
+    "LBL_WIDGET_SHOW_SUMMARY": "Show summary",
+    "Upcoming events": "Upcoming events based on selected date fields.",
+    "Upcoming Activities": "Calendar - pending",
+    "ChartFilter": "Chart Filter",
+    "Rss": "RSS",
+    "LBL_CREATED_BY_ME_BUT_NOT_MINE_OVERDUE_ACTIVITIES": "Overdue matters delegated",
+    "Mini List": "Mini List",
+    "Calendar": "Calendar",
+    "Delegated (overdue) project tasks": "Delegated (overdue) project tasks",
+    "Delegated project tasks": "Delegated project tasks",
+    "History": "History",
+    "Key Metrics": "Key metrics",
+    "Overdue Activities": "Overdue activities",
+    "LBL_PRODUCTS_SOLD_TO_RENEW": "Products sold - to renew",
+    "LBL_SOLD_SERVICES_TO_RENEW": "Sold Services - to renew",
+    "LBL_CREATED_BY_ME_BUT_NOT_MINE_ACTIVITIES": "Matters delegated",
+    "LIST_OF_LAST_UPDATED_RECORD": "List of last updated record",
+    "Mails List": "Most recent emails",
+    "Notebook": "Notepad"
   }
 }
