--- a/languages/en-US/Home.json
+++ b/languages/en-US/Home.json
@@ -56,7 +56,7 @@
     "LBL_PRODUCTS_SOLD_TO_RENEW": "Products sold - to renew",
     "LBL_SOLD_SERVICES_TO_RENEW": "Sold Services - to renew",
     "LBL_CREATED_BY_ME_BUT_NOT_MINE_ACTIVITIES": "Matters delegated",
-    "LIST_OF_LAST_UPDATED_RECORD": "List of last updated record",
+    "LIST_OF_LAST_UPDATED_RECORD": "List of last updated records",
     "Mails List": "Most recent emails",
     "Notebook": "Notepad"
   }
