--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -1,3 +1,6 @@
 {
-  "php": {}
+  "php": {
+    "LBL_PL_VAT_PAYER_LABEL": "Verification of the status of the VAT payer",
+    "LBL_PL_VAT_PAYER_DESC": "Verifies whether the entity is registered as a VAT taxpayer on prior to sending the inquiry based on the tax identification number."
+  }
 }
