--- a/languages/en-US/Accounts.json
+++ b/languages/en-US/Accounts.json
@@ -79,8 +79,7 @@
     "LBL_ACCOUNTS_BY_INDUSTRY": "Accounts by industry",
     "Overdue Activities": "Overdue activities",
     "LBL_NEGLECTED_ACCOUNTS": "Neglected Accounts",
-    "LBL_NEW_ACCOUNTS": "New Accounts",
-    "LBL_VAT_PAYER": "Verification of the status of the VAT payer"
+    "LBL_NEW_ACCOUNTS": "New Accounts"
   },
   "js": {
     "JS_DUPLICTAE_CREATION_CONFIRMATION": "Account name already exists. Do you want to create a duplicate record?",
