--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -1,10 +1,10 @@
 {
   "php": {
     "LBL_PL_VAT_PAYER_LABEL": "Verification of the status of the VAT payer",
-    "LBL_PL_VAT_PAYER_DESC": "Verifies whether the entity is registered as a VAT taxpayer on prior to sending the inquiry based on the tax identification number."
+    "LBL_PL_VAT_PAYER_DESC": "Verifies whether the entity is registered as a VAT taxpayer on prior to sending the inquiry based on the tax identification number.",
     "LBL_GUS": "GUS",
-    "LBL_GUS_DESC": "Central Statistical Office of Poland",
+    "LBL_GUS_DESC": "Service that provides data from the Central Register of Entities of Poland",
     "LBL_VIES": "VIES",
-    "LBL_VIES_DESC": "The VAT Information Exchange System (VIES) is an electronic means of transmitting information relating to VAT registration (i.e., validity of VAT numbers) of companies registered in the European Union."
+    "LBL_VIES_DESC": "Confirmation of the VAT number for EU countries. Makes it possible to check whether the contractor is subject to a zero VAT rate"
   }
 }
