Integration with Companies House API

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -9,6 +9,8 @@
     "LBL_REQUEST_DATE": "Request Date",
     "LBL_REQUEST_ID": "Request ID",
     "LBL_POLAND_NCR": "Polish National Court Register",
-    "LBL_POLAND_NCR_DESC": "Get company data from the Polish National Court Register"
+    "LBL_POLAND_NCR_DESC": "Get company data from the Polish National Court Register",
+    "LBL_UNITED_KINGDOM_CH": "Companies House",
+    "LBL_UNITED_KINGDOM_CH_DESC": "Check company in government register of companies for the UK"
   }
 }
