--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -1,6 +1,8 @@
 {
   "php": {
     "RecordCollector": "RecordCollector",
+    "LBL_RECORD_COLLECTOR": "RecordCollector",
+    "LBL_RECORD_COLLECTOR_DESCRIPTION": "RecordCollector",
     "LBL_NAME": "Name",
     "LBL_SUCCESSFULLY_UPDATED": "The status change was successful"
   },
