--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -4,7 +4,8 @@
     "LBL_RECORD_COLLECTOR": "RecordCollector",
     "LBL_RECORD_COLLECTOR_DESCRIPTION": "RecordCollector",
     "LBL_NAME": "Name",
-    "LBL_SUCCESSFULLY_UPDATED": "The status change was successful"
+    "LBL_SUCCESSFULLY_UPDATED": "The status change was successful",
+    "LBL_DOC_URL": "Documentation URL"
   },
   "js": {}
 }
