New field type inventory has been added: Discount aggregation type

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -492,6 +492,11 @@
     "LBL_TAX": "Tax",
     "LBL_TAX_IN_PERCENT": "Tax (%)",
     "LBL_TAX_MODE": "Tax mode",
+    "LBL_DISCOUNT_AGGREGATION": "Discount aggregation type",
+    "LBL_DISCOUNT_AGGREGATION_DESC": "Selection list of allowed discount summation types",
+    "LBL_CANNOT_BE_COMBINED": "Cannot be combined",
+    "LBL_IN_TOTAL": "In total",
+    "LBL_CASCADE": "Cascade",
     "LBL_Thu": "Thu",
     "LBL_TO": "To",
     "LBL_TO_LC": "to",
