Add hidding config button

--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -1,8 +1,8 @@
 {
   "php": {
     "RecordCollector": "RecordCollector",
-    "LBL_RECORD_COLLECTOR": "RecordCollector",
-    "LBL_RECORD_COLLECTOR_DESCRIPTION": "RecordCollector",
+    "LBL_RECORD_COLLECTOR": "Record Collectors Config",
+    "LBL_RECORD_COLLECTOR_DESCRIPTION": "Configuration Panel for Record Collectors",
     "LBL_NAME": "Name",
     "LBL_SUCCESSFULLY_UPDATED": "The status change was successful",
     "LBL_DOC_URL": "Documentation URL",
