--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -2,7 +2,7 @@
   "php": {
     "RecordCollector": "RecordCollector",
     "LBL_RECORD_COLLECTOR": "Record Collectors Config",
-    "LBL_RECORD_COLLECTOR_DESCRIPTION": "Configuration Panel for Record Collectors",
+    "LBL_RECORD_COLLECTOR_DESCRIPTION": "Configuration Panel for required data (ex. API Key, Username) for connecting with services that provide companies data.",
     "LBL_NAME": "Name",
     "LBL_SUCCESSFULLY_UPDATED": "The status change was successful",
     "LBL_DOC_URL": "Documentation URL",
