--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -8,9 +8,9 @@
     "LBL_VIES_DESC": "Checks if the business entity has a valid VAT-EU number for intra-community transactions within the European Union.",
     "LBL_REQUEST_DATE": "Request Date",
     "LBL_REQUEST_ID": "Request ID",
-    "LBL_POLAND_NCR": "Polish National Court Register",
+    "LBL_POLAND_NCR": "Polish National Court Register [PL]",
     "LBL_POLAND_NCR_DESC": "Get company data from the Polish National Court Register",
-    "LBL_UNITED_KINGDOM_CH": "Companies House",
+    "LBL_UNITED_KINGDOM_CH": "Companies House [GB]",
     "LBL_UNITED_KINGDOM_CH_DESC": "Check company in government register of companies for the UK"
   }
 }
