--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -8,7 +8,8 @@
     "LBL_DOC_URL": "Documentation URL",
     "LBL_API_KEY": "API Key",
     "LBL_SAVE_NOTIFY_OK": "Saved changes.",
-    "LBL_PROVIDER_INVALID": "Configuration is incorrect"
+    "LBL_PROVIDER_INVALID": "Configuration is incorrect",
+    "LBL_CONFIG": "Setup data for Record Collector"
   },
   "js": {}
 }
