--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -1,6 +1,6 @@
 {
   "php": {
-    "RecordCollector": "RecordCollector",
+    "RecordCollector": "Record collectors",
     "LBL_RECORD_COLLECTOR": "Record collectors",
     "LBL_RECORD_COLLECTOR_DESCRIPTION": "Configuration Panel for required data (ex. API Key, Username) for connecting with services that provide companies data.",
     "LBL_NAME": "Name",
@@ -9,7 +9,7 @@
     "LBL_API_KEY": "API Key",
     "LBL_SAVE_NOTIFY_OK": "Saved changes.",
     "LBL_PROVIDER_INVALID": "Configuration is incorrect",
-    "LBL_CONFIG": "Setup data for Record Collector"
+    "LBL_CONFIG": "Setup data for record collector"
   },
   "js": {}
 }
