Add search by company name to UKCompaniesHouse.php

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -12,6 +12,7 @@
     "LBL_POLAND_NCR_DESC": "Get company data from the Polish National Court Register",
     "LBL_UNITED_KINGDOM_CH": "Companies House [GB]",
     "LBL_UNITED_KINGDOM_CH_DESC": "Check company in government register of companies for the UK",
+    "LBL_UNITED_KINGDOM_CH_NOT_FOUND_NO_DATA": "No NCR or company name has been set",
     "LBL_UK_VAT_PAYER": "Confirm the VAT number [GB]",
     "LBL_UK_VAT_PAYER_DESC": "Check if british company is VAT Payer",
     "LBL_UK_VAT_PAYER_CONFIRM": "The entity with the given number is an UK VAT payer",
