--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -9,8 +9,7 @@
     "LBL_API_KEY": "API Key",
     "LBL_SAVE_NOTIFY_OK": "Saved changes.",
     "LBL_PROVIDER_INVALID": "Configuration is incorrect",
-    "LBL_CONFIG": "Setup data for record collector",
-    "LBL_FIELDS_MAPPING": "Fields mapping"
+    "LBL_CONFIG": "Setup data for record collector"
   },
   "js": {}
 }
