--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -16,6 +16,8 @@
     "LBL_UK_VAT_PAYER": "Confirm the VAT number [GB]",
     "LBL_UK_VAT_PAYER_DESC": "Check if british company is VAT Payer",
     "LBL_UK_VAT_PAYER_CONFIRM": "The entity with the given number is an UK VAT payer",
-    "LBL_UK_VAT_PAYER_NOT_CONFIRM": "The entity with the given number is not an UK VAT payer"
+    "LBL_UK_VAT_PAYER_NOT_CONFIRM": "The entity with the given number is not an UK VAT payer",
+    "LBL_USA_EDGAR": "EDGAR Registry of Securities and Exchange Commission [USA]",
+    "LBL_USA_EDGAR_DESC": "Check company in Electronic Data Gathering, Analysis, and Retrieval of Securities and Exchange Commission"
   }
 }
