The next part of the WAPRO ERP integration has been added

--- a/languages/en-US/Settings/Wapro.json
+++ b/languages/en-US/Settings/Wapro.json
@@ -11,6 +11,7 @@
     "FL_DATABASE": "Database name",
     "FL_USERNAME": "User name",
     "FL_PASSWORD": "Password",
+    "LBL_NUMBER_OF_ENTRIES": "Number of entries",
     "LBL_MULTI_COMPANY": "Departments/Company (read only)",
     "LBL_COMPANY_BANK_ACCOUNTS": "Company bank accounts (read only)",
     "LBL_ACCOUNTS": "Accounts (read only)",
