The next part of the WAPRO ERP integration has been added

--- a/languages/en-US/Settings/Wapro.json
+++ b/languages/en-US/Settings/Wapro.json
@@ -18,6 +18,7 @@
     "LBL_CONTACTS": "Contacts (read only)",
     "LBL_PRODUCTS": "Products (read only)",
     "LBL_INVOICE": "Invoices (read only)",
+    "LBL_CORRECTING_INVOICE": "Correction invoices (read only)",
     "LBL_LOGS_VIEWER": "Logs viewer",
     "LBL_SAVE_AND_VERIFY": "Save and verify"
   }
