--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -18,7 +18,7 @@
     "LBL_UK_VAT_PAYER_CONFIRM": "The entity with the given number is an UK VAT payer",
     "LBL_UK_VAT_PAYER_NOT_CONFIRM": "The entity with the given number is not an UK VAT payer",
     "LBL_USA_EDGAR": "EDGAR Registry of Securities and Exchange Commission [USA]",
-    "LBL_USA_EDGAR_DESC": "Check company in Electronic Data Gathering, Analysis, and Retrieval of Securities and Exchange Commission",
+    "LBL_USA_EDGAR_DESC": "Check company in US Electronic Data Gathering, Analysis, and Retrieval of Securities and Exchange Commission",
     "LBL_POLAND_CEIDG": "Load business entity data from CEIDG [PL]",
     "LBL_POLAND_CEIDG_DESC": "Get company data from the Polish Central Registration And Information On Business"
   }
