Add ApiGovFrance.php to Record Collectors.

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -23,6 +23,8 @@
     "LBL_POLAND_CEIDG_DESC": "Get company data from the Polish Central Registration And Information On Business",
     "LBL_ORB": "Orb Intelligence API by The Dun and Bradstreet [GLOBAL]",
     "LBL_ORB_DESC": "Fetching companies data from around the world",
-    "LBL_ORB_VAT": "EIN/VAT (Only in USA)"
+    "LBL_ORB_VAT": "EIN/VAT (Only in USA)",
+    "LBL_API_GOV_FRANCE": "Api Government of French Republic [FRA]",
+    "LBL_API_GOV_FRANCE_DESC": "Fetching data about French companies from the State Institute of Statistics and Economic Research (INSEE)"
   }
 }
