--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -21,7 +21,7 @@
     "LBL_USA_EDGAR_DESC": "Check company in US Electronic Data Gathering, Analysis, and Retrieval of Securities and Exchange Commission",
     "LBL_POLAND_CEIDG": "Load business entity data from CEIDG [PL]",
     "LBL_POLAND_CEIDG_DESC": "Get company data from the Polish Central Registration And Information On Business",
-    "LBL_ORB": "Orb Intelligence API by The Dun and Bradstreet [GLOBAL]",
+    "LBL_ORB": "Orb Intelligence API by The Dun and Bradstreet",
     "LBL_ORB_DESC": "Fetching companies data from around the world",
     "LBL_ORB_VAT": "EIN/VAT (Only in USA)"
   }
