--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -139,6 +139,8 @@
     "LBL_SHOP_YETIFORCEUKVATPAYERSTATUS_INTRO": "",
     "LBL_SHOP_YETIFORCEUKVATPAYERSTATUS_DESC": "",
     "LBL_SHOP_YETIFORCEUSAEDGAR_INTRO": "",
-    "LBL_SHOP_YETIFORCEUSAEDGAR_DESC": ""
+    "LBL_SHOP_YETIFORCEUSAEDGAR_DESC": "",
+    "LBL_SHOP_YETIFORCEFRENTERPRISEGOUV_INTRO": "",
+    "LBL_SHOP_YETIFORCEFRENTERPRISEGOUV_DESC": ""
   }
 }
